# ainu-lm

./: .editorconfig  .envrc  .gitignore  LICENSE  README.md  cloudbuild.yaml  cspell.json  flake.nix  push.py  pyproject.toml  test.py  test2.py  test_demo.py  test_push.py  tokenizer.json
.github/workflows/: ci.yaml
cloudbuild/: pull_request.yaml  schedule.yaml
src/ainu_lm_generator/app/: args.py  main.py
src/ainu_lm_generator/libs/: __init__.py
src/ainu_lm_generator/services/: __init__.py  back_translation_generator.py  rule_based_error_generator.py
src/ainu_lm_pipeline/: compile.py  config.py  create.py  pipeline.py  schedule.py  submit.py
src/ainu_lm_pipeline/app/: compile.py  config.py  get_timestamp.py  gpt2.py  main.py  mt5_gec.py  push.py  schedule.py  submit.py  t5.py  t5_gce.py  t5_gec.py  utils.py
src/ainu_lm_pipeline/components/: __init__.py  build_trainer_image.py  get_base_output_directory.py  get_byte_level_bpe_training_job_result.py  get_byte_level_bpe_training_job_spec.py  get_gpt2_training_job_result.py  get_gpt2_training_job_spec.py  get_hf_token.py  get_kana_training_job_spec.py  get_latest_revisions.py  get_latest_secret_by_id.py  get_lm_training_job_details.py  get_lm_training_job_result.py  get_lm_training_job_spec.py  get_mt5_affix_training_job_spec.py  get_mt5_gec_training_job_result.py  get_mt5_gec_training_job_spec.py  get_mt5_training_job_spec.py  get_mt_ain2ja_training_job_spec.py  get_mt_bidi_training_job_spec.py  get_mt_ja2ain_training_job_spec.py  get_mt_training_job_spec.py  get_revision_dataset.py  get_revision_source.py  get_roberta_pos_training_job_spec.py  get_roberta_training_job_result.py  get_roberta_training_job_spec.py  get_sentencepiece_training_job_result.py  get_sentencepiece_training_job_spec.py  get_t5_gce_training_job_result.py  get_t5_gce_training_job_spec.py  get_t5_gec_training_job_result.py  get_t5_gec_training_job_spec.py  get_t5_training_job_result.py  get_t5_training_job_spec.py  get_tokenizer_training_job_details.py  get_tokenizer_training_job_result.py  get_tokenizer_training_job_spec.py  get_worker_pool_specs.py  push_to_huggingface_hub.py
src/ainu_lm_pipeline/pipelines/: __init__.py  ainu_gpt2_pipeline.py  ainu_kana_pipeline.py  ainu_lm_pipeline.py  ainu_mt5_affix_pipeline.py  ainu_mt5_gec_pipeline.py  ainu_mt5_pipeline.py  ainu_mt_pipeline.py  ainu_roberta_pipeline.py  ainu_t5_gce_pipeline.py  ainu_t5_gec_pipeline.py  ainu_t5_pipeline.py
src/ainu_lm_trainer/: Dockerfile  add_test.py
src/ainu_lm_trainer/app/: __init__.py  argument_parser.py  argument_parser_test.py  main.py  task_byte_level_bpe.py  task_cache.py  task_gpt2.py  task_language_model.py  task_mt5_gec.py  task_roberta.py  task_sentencepiece.py  task_t5.py  task_t5_gce.py  task_t5_gec.py  task_tokenizer.py  tokenize.py
src/ainu_lm_trainer/cli/: main.py  tokenize.py
src/ainu_lm_trainer/config/: __init__.py  config_dataset.py  config_dataset_test.py  config_fine_tuning.py  config_fine_tuning_test.py  config_mt_experiments.py  config_mt_experiments_test.py  config_training.py  config_training_test.py  config_workspace_test.py  dataset_config.py  fine_tuning_config.py  training_config.py  workspace_config.py
src/ainu_lm_trainer/models/: __init__.py  job_dir.py  job_dir_test.py  training_dataset.py  training_dirs.py
src/ainu_lm_utils/: Dockerfile
(+136 files in other folders)
