[tool.poetry]
name = "ainu-lm"
version = "0.1.0"
description = ""
authors = ["Ryo Igarashi <n33t5hin@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12.0"
datasets = "^2.18.0"
transformers = "^4.38.2"
sentencepiece = "^0.2.0"
tokenizers = "^0.15.2"
google-cloud-storage = "^2.16.0"
cloudml-hypertune = "^0.1.0.dev6"
accelerate = "^0.28.0"
google-cloud-aiplatform = "^1.44.0"
google-cloud-pipeline-components = "^2.11.0"
tensorboard = "^2.16.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
ruff = "^0.3.3"
mypy = "^1.9.0"
torch = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
exclude = ["ainu_lm_pipeline"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]