[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ainu-lm"
version = "0.1.0"
description = ""
authors = [
	{ name = "Ryo Igarashi <n33t5hin@gmail.com>", email = "n33t5hin@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
	"datasets==2.18.0",
	"transformers==4.38.2",
	"sentencepiece==0.2.0",
	"tokenizers==0.15.2",
	"google-cloud-storage==2.16.0",
	"cloudml-hypertune==0.1.0.dev6",
	"accelerate==0.28.0",
	"google-cloud-aiplatform==1.44.0",
	"google-cloud-pipeline-components==2.11.0",
	"tensorboard==2.16.2"
]

[project.optional-dependencies]
test = [
	"pytest==8.1.1",
	"pytest-cov==4.1.0"
]
dev = [
	"ruff==0.3.3",
	"mypy==1.9.0",
	"torch==2.2.1"
]

[tool.setuptools]
packages = ["src"]

[tool.mypy]
ignore_missing_imports = true
exclude = ["ainu_lm_pipeline"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "ANN"]
# selfに型つけろって言ってくるやつ
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
