[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ainu-lm"
version = "0.1.0"
description = ""
authors = [
	{ name = "Ryo Igarashi <n33t5hin@gmail.com>", email = "n33t5hin@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
	"evaluate==0.4.2",
	"datasets==2.19.0",
	"transformers==4.40.1",
	"tokenizers==0.19.1",
	"sentencepiece==0.2.0",
	"sacrebleu==2.4.2",
	"seqeval==1.2.2",
	"numpy==1.26.4",
	"google-cloud-storage==2.16.0",
	"cloudml-hypertune==0.1.0.dev6",
	"accelerate==0.29.3",
	"google-cloud-aiplatform[tensorboard]==1.49.0",
	"google-cloud-pipeline-components==2.14.0",
]

[project.scripts]
"ainu-lm-pipeline" = "ainu_lm_pipeline.app.main:main"
"ainu-lm-trainer" = "ainu_lm_trainer.app.main:main"
"ainu-lm-utils" = "ainu_lm_utils.app.main:main"

[project.optional-dependencies]
test = ["pytest==8.1.1", "pytest-cov==4.1.0"]
dev = ["ruff==0.3.3", "mypy==1.9.0", "torch"]

[tool.mypy]
ignore_missing_imports = true
exclude = ["^((?!src).)*$", "ainu_lm_pipeline"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "ANN"]
# selfに型つけろって言ってくるやつ
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
